changed header styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
 </head>
 <body id="{% block page_id %}home{% endblock page_id %}">
     <header>
-        <h1>EventeX</h1>
-        <h2>Uma nova forma de ver eventos</h2>
+        <h1 class="logo">EventeX</h1>
+        <h2 class="call">Uma nova forma de ver eventos</h2>
     </header>
     <nav>
         <ul class="main nav horizontal">
