--- a/static/css/global.css
+++ b/static/css/global.css
@@ -4,6 +4,9 @@ html, body {
     min-height: 100%;
 }
 
+/**
+ * based on layout presented by Lea Verou: http://leaverou.me/css3patterns/#carbon-fibre;
+ */
 body {
     background:
         -moz-radial-gradient(black 15%, transparent 16%) 0 0,
@@ -80,26 +83,32 @@ a:hover, a:active { color: #64a8d1; text-shadow: -1px -1px 0 rgba(75,75,75,0.75)
  */
 header, nav, .container, footer { padding: 0 2.5%; }
 header, footer { background-color: rgba(175, 175, 175, 0.125); color: rgba(255, 255, 255, 0.975); text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.975); }
-header { border-bottom: 4px solid #fff; padding-top: 16px; }
+header { border-bottom: 4px solid #fff; margin-top: 16px; padding: 0.25% 2.5%; }
 header, nav, .container { border-bottom: 1px solid #111; }
 nav, .container, footer { border-top: 1px solid #333; }
 
 /**
  * HEADER
  */
-header h1 {
-    font-family: 'Play', sans-serif; font-weight: 700; font-size: 2.5em; line-height: 1.5;
-    margin: 0; padding: 0;
+.logo, .call {
+    font-family: 'Play', sans-serif; line-height: 1.5;
+    padding: 0;
 }
-header h2 {
-    font-family: 'Play', sans-serif; font-weight: 400; font-size: 1.5em; line-height: 1.5;
-    margin: -25px 0 0 75px; padding: 0;
+.logo {
+    color: #624ad8;
+    font-weight: 700; font-size: 2.5em;
+    margin: 0;
+}
+.call {
+    color: #8170d8;
+    font-weight: 400; font-size: 1.5em;
+    margin: -25px 0 0 75px;
 }
 
 /**
  * NAVIGATION
  */
-nav { background-color: rgba(97, 97, 97, 0.125); line-height: 2; padding-top: 2px; padding-bottom: 2px; }
+nav { background-color: rgba(97, 97, 97, 0.125); font-size: 0.975em; line-height: 2; padding-top: 2px; padding-bottom: 2px; }
 
 /**
  * MAIN CONTENT
