--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,3 +1,7 @@
+/**
+ * color scheme based on
+ * http://www.colorschemedesigner.com/#0F427w0w0w0w0
+ */
 html, body {
     font-family: 'Muli', sans-serif; font-size: 16px; line-height: 1.25;
     margin: 0; padding: 0;
@@ -50,14 +54,19 @@ body:before, body:after {
 body:before { top: 0; }
 body:after { left: 0; }
 
-a:link, a:visited, a:hover, a:active {
-    font-weight: bold;
-    text-decoration: none;
+.link {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    margin: 0; padding: 0;
 }
-a:link, a:visited { text-shadow: 1px 1px 0 rgba(75,75,75,0.75); }
-a:link { color: #ff8c00; }
+
+a:link, a:visited, a:hover, a:active, .link { font-weight: bold; }
+a:link, a:visited, .link { text-shadow: 1px 1px 1px rgba(25,25,25,0.75); }
+a:link, a:visited { text-decoration: underline; }
+a:link, .link { color: #ff8c00; }
 a:visited { color: #ffc073; }
-a:hover, a:active { color: #64a8d1; text-shadow: -1px -1px 0 rgba(75,75,75,0.75); }
+a:hover, a:active, .link:hover { color: #64a8d1; text-decoration: none; text-shadow: -1px -1px 1px rgba(25,25,25,0.75); }
 
 /**
  * UTILS
@@ -72,17 +81,18 @@ a:hover, a:active { color: #64a8d1; text-shadow: -1px -1px 0 rgba(75,75,75,0.75)
     border-style: solid;
     border-width: 0 1px;
     float: left;
-    margin: 0 5px; padding: 0 5px;
+    margin: 0 5px; padding: 0;
 }
-.item:first-child { border-left: 0; margin-left: 0; padding-left: 0; }
-.item:last-child { border-right: 0; margin-right: 0; padding-right: 0; }
-.item .navigate { display: block; }
+.item:first-child { border-left: 0; margin-left: 0; }
+.item:last-child { border-right: 0; margin-right: 0; }
+.item .navigate { display: block; padding: 0 5px; text-decoration: none; }
+.highlight { color: #ffcf00; font-weight: bold; }
 
 /**
  * LAYOUT
  */
 header, nav, .container, footer { padding: 0 2.5%; }
-header, footer { background-color: rgba(175, 175, 175, 0.125); color: rgba(255, 255, 255, 0.975); text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.975); }
+header, footer { background-color: rgba(175, 175, 175, 0.125); color: rgba(255, 255, 255, 0.975); text-shadow: 1px 1px 1px rgba(25,25,25,0.975); }
 header { border-bottom: 4px solid #fff; margin-top: 16px; padding: 0.25% 2.5%; }
 header, nav, .container { border-bottom: 1px solid #111; }
 nav, .container, footer { border-top: 1px solid #333; }
@@ -109,6 +119,14 @@ nav, .container, footer { border-top: 1px solid #333; }
  * NAVIGATION
  */
 nav { background-color: rgba(97, 97, 97, 0.125); font-size: 0.975em; line-height: 2; padding-top: 2px; padding-bottom: 2px; }
+#home .to-home > .navigate {
+    background-color: rgba(175, 175, 175, 0.25);
+    color: #bbb;
+    border: 1px solid #333;
+    border-radius: 10px;
+    text-shadow: -1px -1px 1px rgba(25,25,25,0.75);
+    pointer-events: none; cursor: default;
+}
 
 /**
  * MAIN CONTENT
@@ -116,7 +134,7 @@ nav { background-color: rgba(97, 97, 97, 0.125); font-size: 0.975em; line-height
 .container {
     background-color: rgba(97, 97, 97, 0.125);
     color: #fee;
-    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.975);
+    text-shadow: 1px 1px 1px rgba(25,25,25,0.75);
 }
 
 /**
@@ -124,3 +142,21 @@ nav { background-color: rgba(97, 97, 97, 0.125); font-size: 0.975em; line-height
  */
 footer { font-size: 0.75em; text-align: right; }
 footer p { margin: 0; padding-top: 10px; padding-bottom: 10px; }
+
+/**
+ * LICENSE
+ */
+.terms {
+    background: rgba(0, 0, 0, 0.25);
+    width: 100%; height: 100%;
+    position: absolute; top: 0; left: 0;
+    display: none;
+}
+.terms.show { display: block; }
+.license-term {
+    color: #fff;
+    text-shadow: 1px 1px 0 rgba(75, 75, 75, 0.5);
+    margin: -12.5% 0 0 -12.5%;
+    width: 25%; height: 25%;
+    position: fixed; top: 50%; left: 50%;
+}
