--- a/templates/index.html
+++ b/templates/index.html
@@ -1,55 +1,10 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html lang="pt-br">
-<head>
-    <title>{% block title %}EventeX{% endblock title %}</title>
-    <meta charset="utf-8" />
-    <link href='http://fonts.googleapis.com/css?family=Play:400,700|Muli:300italic,400,400italic' rel='stylesheet' type='text/css' />
-    <link href="{{ STATIC_URL }}css/global.css" rel="stylesheet" type="text/css" />
-</head>
-<body id="{% block page_id %}home{% endblock page_id %}">
-    <header>
-        <h1 class="logo">EventeX</h1>
-        <h2 class="call">Uma nova forma de ver eventos</h2>
-    </header>
-    <nav>
-        <ul class="main nav horizontal">
-            <li class="item to-home"><a href="#" class="navigate">Home</a></li>
-        </ul>
-    </nav>
-    <div class="container">
-        <div class="main" role="main">
-            <div class="event-container">
-                <p>O evento mais sensacional do ano, depois do <strong class="highlight" lang="en">Dev in Rio</strong>.</p>
-                <p>Você não pode perder esta oportunidade!</p>
-                <p class="highlight">Abertura das inscrições em <span class="date">15/05/2011</span>.</p>
-                <p>Em caso de dúvidadas ou para maiores informações entrem em <a href="mailto:eventex@eventex.com.br">contato conosco</a>.</p>
-            </div>
-        </div>
-        <aside></aside>
-    </div>
-    <footer>
-        <p>Software licensiado sob <button href="#" class="link"><acronym title="DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE">WTFPL</acronym></button> &copy; 2011 <a href="mailto:joao.dubas@gmail.com">João Paulo Dubas</a></p>
-        <div id="license-container" class="terms">
-            <pre class="license-term">
-DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE  
-                    Version 2, December 2004
+{% block pade_id %}home{% endblock pade_id %}
 
-Copyright (C) 2011 João Paulo Dubas &lt;http://dbsdev.com.br&gt;
-
-Everyone is permitted to copy and distribute verbatim or modified  
-copies of this license document, and changing it is allowed as long  
-as the name is changed.
-
-***
-
-    DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
-
-    TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
-
-    0. You just DO WHAT THE FUCK YOU WANT TO.
-            </pre>
-        </div>
-    </fotter>
-</body>
-</html>
+{% block content %}
+    <p>O evento mais sensacional do ano, depois do <strong class="highlight" lang="en">Dev in Rio</strong>.</p>
+    <p>Você não pode perder esta oportunidade!</p>
+    <p class="highlight"><a href="{% url subscription:subscribe %}">Faça sua inscrição já!</a>.</p>
+    <p>Em caso de dúvidadas ou para maiores informações entrem em <a href="mailto:eventex@eventex.com.br">contato conosco</a>.</p>
+{% endblock content %}
