--- a/static/css/global.css
+++ b/static/css/global.css
@@ -156,7 +156,27 @@ nav { background-color: rgba(97, 97, 97, 0.125); font-size: 0.85em; line-height:
 }
 .field-container.vertical > li { margin-top: 1em; }
 .field-container.vertical label { display: block; }
-.field-container.vertical input[type=text] { display: block; width: 25%; }
+.field-container.vertical input[type=text] {
+    border: 0;
+    -o-box-shadow: 0 0 5px 2px rgba(75,75,75,0.5) inset;
+    -ms-box-shadow: 0 0 5px 2px rgba(75,75,75,0.5) inset;
+    -moz-box-shadow: 0 0 5px 2px rgba(75,75,75,0.5) inset;
+    -webkit-box-shadow: 0 0 5px 2px rgba(75,75,75,0.5) inset;
+    box-shadow: 0 0 5px 2px rgba(75,75,75,0.5) inset;
+    padding: 2px 0;
+    display: block;
+    width: 25%;
+}
+.field-container.vertical input[type=text]:focus {
+    -o-box-shadow: 0 0 5px 2px rgba(9,105,163,0.5);
+    -ms-box-shadow: 0 0 5px 2px rgba(9,105,163,0.5);
+    -moz-box-shadow: 0 0 5px 2px rgba(9,105,163,0.5);
+    -webkit-box-shadow: 0 0 5px 2px rgba(9,105,163,0.5);
+    box-shadow: 0 0 5px 2px rgba(9,105,163,0.5);
+}
+.field-container.vertical input.phone { display: inline-block;}
+.field-container.vertical .phone:nth-child(2) { width: 6.25%; margin-right: 1.25%; }
+.field-container.vertical .phone:last-child { width: 17.5%; }
 .form-container input[type=submit] {
     background: #ddd;
     box-shadow: 1px 1px 1px rgba(75,75,75,0.5);
