--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
         <ul class="main nav horizontal">
             <li class="item to-home"><a href="{% url home %}" class="navigate">Home</a></li>
             <li class="item to-subscribe"><a href="{% url subscription:subscribe %}" class="navigate">Inscrição</a></li>
+            <li class="item to-speaker"><a href="{% url list_speaker %}" class="navigate">Palestrantes</a></li>
         </ul>
     </nav>
     <div class="container">
