--- a/core/templates/core/list_speaker.html
+++ b/core/templates/core/list_speaker.html
@@ -4,6 +4,10 @@
     {% for speaker in speakers %}
         {% include "core/include_speaker.html" %}
     {% empty %}
-        <div class="no-speaker">Você chegou muito cedo, que tal fazer sua <a href="{% url subscription:subscribe %}">inscriação</a> e entraremos em contato assim que tivermos maiores detalhes sobre o evento</div>
+        <div class="no-speaker">
+            <p>Você chegou muito cedo!</p>
+            <p>Que tal fazer sua <a href="{% url subscription:subscribe %}">inscrição</a>?</p>
+            <p>Entraremos em contato assim que tivermos maiores detalhes sobre o evento</p>
+        </div>
     {% endfor %}
 {% endblock content %}
