--- a/static/css/global.css
+++ b/static/css/global.css
@@ -215,7 +215,7 @@ nav { background-color: rgba(97, 97, 97, 0.125); font-size: 0.85em; line-height:
     .avatar, .avatar > img { display: block; }
     .avatar { background: #fff; padding: 5px 5px 15px 5px; margin-right: 15px; }
     .info {}
-        .info h3 { margin-top: 0; }
+        .info h3, .info h4 { margin-top: 0; }
         .additional-info {}
         .resume {}
         .contact {}
