added additional details for speakers

--- a/core/templates/core/list_speaker.html
+++ b/core/templates/core/list_speaker.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% for speaker in speakers %}
-        {% include "core/include_speaker.html" %}
+        {% include "core/snippet_speaker.html" %}
     {% empty %}
         <div class="no-speaker">
             <p>Você chegou muito cedo!</p>
