--- a/core/templates/core/detail_speaker.html
+++ b/core/templates/core/detail_speaker.html
@@ -1,5 +1,5 @@
 {% extends "core/base_speaker.html" %}
 
 {% block content %}
-    {% include "core/include_speaker.html" %}
+    {% include "core/snippet_speaker.html" %}
 {% endblock content %}
