--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
             <li class="item to-home"><a href="{% url home %}" class="navigate">Home</a></li>
             <li class="item to-subscribe"><a href="{% url subscription:subscribe %}" class="navigate">Inscrição</a></li>
             <li class="item to-speaker"><a href="{% url list_speaker %}" class="navigate">Palestrantes</a></li>
+            <li class="item to-talk"><a href="{% url list_talk %}" class="navigate">Palestras</a></li>
+            <li class="item to-course"><a href="{% url list_course %}" class="navigate">Cursos</a></li>
         </ul>
     </nav>
     <div class="container">
